[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/fsm-node/editor/graph/FSMEditorGraph.gd" type="Script" id=1]

[node name="Graph" type="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
